# rust-email-send-google-app-pass

./: .env.example  .gitignore  Cargo.toml  README.md
config/: hello.toml
src/: args.rs  main.rs  utils.rs
templates/: subject.html
