[package]
name = "mail-send"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
lazy_static = "1.4.0"
lettre = "0.10.0"
tera = "1.19.1"
tokio = { version = "1.35.0", features = ["full"] }
