[package]
name = "mail-send"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
dotenv = "0.15.0"
lettre = "0.10.0"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.35.0", features = ["full"] }
toml = "0.8.12"
